--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "scripts": {
       "start":"cd backend && npm start",
+      "prebuild":"cd server && npm install & cd client && npm install" ,
       "build": "cd client && npm run build",
       "postbuild": "mv -f client/build server/src/public"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines":{
+    "node": ">=18"
+  }
 }
