--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "start":"cd backend && npm start",
-      "prebuild":"cd server && npm install & cd client && npm install" ,
-      "build": "cd client && npm run build",
-      "postbuild": "mv -f client/build server/src/public"
+    "start": "cd backend && npm start",
+    "prebuild": "cd server && npm install & cd client && npm install",
+    "build": "cd client && npm run build",
+    "postbuild": "mv -f client/build server/src/public"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "engines":{
+  "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7"
   }
 }
